--- a/fest/templates/location.html
+++ b/fest/templates/location.html
@@ -16,14 +16,14 @@
                                     <span class="image main">
                                             <img src="{% static "fest/images/pic04.jpg"%}" alt="" />
                                     </span>
-                                    <h1>Accomodation</h1>
+                                    <h1>Accommodation</h1>
                                     <h2>Mountain Lodge Camp</h2>
                                     <p>
                                     <span class="image right">
                                             <img src="{% static "fest/images/pic05.jpg" %}" alt="" />
                                     </span>
                                     Our camp is centrally located at Lenk village and just 2 minutes’ walk from the
-                                    train station and 5 minuets walk away from the call. So no LamaAirlines needed this
+                                    train station and 5 minuets walk away from the hall. So no LamaAirlines needed this
                                     year.</br>
                                     <h3>Dorms</h3>
                                     We have 4 dormitories with each between 16 - 20 sleeping spots.</br>
@@ -41,18 +41,17 @@
                                     <h3>Some other extra infos:</h3>
                                     <p>We'll place the sauna near to the camp.</br>
                                     There are parking places for cars and mini buses.</br>
-                                    We recommend you come by Train.</br>
-                                    Bring some house schoes for the hall and house.</br>
-                                    All the meals are in the Hall. Some snacks and coffe will be provided, but maybe not
-                                    constantly.</br>
+                                    We recommend you to come by Train.</br>
+                                    Bring some house shoes for the hall and house.</br>
+                                    All the meals are in the hall. Some snacks and coffee will be provided.</br>
                             </section>
                             <section id="location" class="main">
                                 <h1>Transportation</h1>
                                 <h2>By train:</h2>
-                                <p>The wonderful destination of Lenk lays at the end of a beautiful and varied train 
+                                <p>The wonderful destination of Lenk lays at the end of a beautiful and varied train
                                 ride from either Bern or Montreux.</br>
                                 There's only one train change from Bern to Lenk.</br>
-                                The Lötschberger train takes you hourly from Bern directly to Zweisimmen, 
+                                The Lötschberger train takes you hourly from Bern directly to Zweisimmen,
                                 where you’ll change trains to catch the 20 minute regional train to Lenk.</p>
                                 <h3>Approximate travel times by train</h3>
                                 <ul>
@@ -62,12 +61,17 @@
                                     <li>Berne/Belp – Lenk: 1h 45 min</li>
                                 </ul>
                                 <h3>Tickets</h3>
-                                <p> Tickets can be bought in the Swiss Main Trains system 
+                                <p> Tickets can be bought in the Swiss Main Trains system
                                 <a href="https://www.sbb.ch/">SBB</a></br>
-                                Prices are very relative to How Soon, Time of Train. As a general recommendation <u>book with time!</u></p>
+                                Prices are very relative to how soon you buy the tickets and time of train.
+                                As a obvious general recommendation <u>book with time!</u></p>
                                 <h2>By car:</h2>
-                                <p> Traveling on the A6 motorway Bern-Thun, take the Wimmis/Zweisimmen exit through the Simmenfluh Tunnel, on the other side of which begins your journey up the Simme River Valley. The main road in the valley, the Simmentalstrasse.</br>
-                        Coming from Bulle and the Canton of Freiburg, one can reach Lenk via Charmey by traveling over the Jaunpass into the Simmental (Boltigen) or by traveling via Château d’Oex-Saanen-Zweisimmen.</p>
+                                <p> Traveling on the A6 motorway Bern-Thun, take the Wimmis/Zweisimmen exit through
+                                the Simmenfluh Tunnel, on the other side of which begins your journey up the Simme
+                                River Valley. The main road in the valley, the Simmentalstrasse.</br>
+                                Coming from Bulle and the Canton of Freiburg, one can reach Lenk via Charmey by
+                                traveling over the Jaunpass into the Simmental (Boltigen) or by
+                                traveling via Château d’Oex-Saanen-Zweisimmen.</p>
                                 <h3>Approximate travel times by car</h3>
                                 <ul>
                                     <li>Berne – Lenk: 1h 15min</li>
