Typos and links 0.2

--- a/fest/templates/index.html
+++ b/fest/templates/index.html
@@ -81,9 +81,10 @@
                         <span class="icon major style3 fa-snowflake"></span>
                         <h3>Special events</h3>
                         <p>
-                        On monday noon ther's an out-door <u>snow event up on the mountain</u> in the ski resort.
-                        (If the weather is good <i class="fa fa-hand-o-left" aria-hidden="true"></i>).
-                        <u>Sauna to relax and an open stage</u> to share your talents.</br>* As an <u>EXTRA</u>,
+                        On monday noon we organized a <u>snow event up on the mountain</u> at the ski resort
+                        (If the weather is good <i class="fa fa-hand-o-left" aria-hidden="true"></i>). Bring warm cloths
+                        for out-door acro. Free afternoon for ski, snowboard or free floor at the hall.</br>
+                        There's <u>sauna to relax and an open stage</u> to share your talents.</br>*As an <u>EXTRA</u>,
                         we could organise a day ski ticket for you.
                         </p>
                     </li>
@@ -101,8 +102,8 @@
                         <h3>Prices</h3>
                         <p>
                         We have tickets based on the amount of days you stay at the festival. All include:</br>
-                        Accomodation, food, workshops, local train and mountain lift ticket.</br>
-                        <u>Single day tickets don't include breakfast</u>. Conditions and Prices:</br></br>
+                        accomodation, food, workshops and mountain lift ticket.</br>
+                        <u>Single day tickets don't include breakfast</u>. Conditions and prices:</br></br>
                         <a class="button" href="{% url 'winterprices'%}">CLICK HERE</a>
                         </p>
                 </ul>
