--- a/formulario/templates/homeform.html
+++ b/formulario/templates/homeform.html
@@ -31,9 +31,9 @@
                         <li data-input-trigger>
                             <label class="fs-field-label fs-anim-upper" for="option" data-info="All the Scheduele is in the Event. Please Comment wich day your comming if you come a Single Day.">How many days will you stay? <i class="fa fa-heart" aria-hidden="true"></i></label>
                             <div class="fs-radio-group fs-radio-custom clearfix fs-anim-lower">
-                                <span><input id="q54" name="option" type="radio" value="Full"/><label for="q54" class="radio-4day">6 Days Pass CHF 460.- | EUR 420.-</label></span>
-                                <span><input id="q53" name="option" type="radio" value="WeekEnd"/><label for="q53" class="radio-3day">Weekend Pass (Fr - Su) CHF 220.- | EUR 200.-</label></span>
-                                <span><input id="q51" name="option" type="radio" value="SingelTicket"/><label for="q51" class="radio-1day">Single Day Ticket CHF 85.- (Comment wich day please)</label></span>
+                                <span><input id="q54" name="option" type="radio" value="FL"/><label for="q54" class="radio-4day">6 Days Pass CHF 460.- | EUR 420.-</label></span>
+                                <span><input id="q53" name="option" type="radio" value="WE"/><label for="q53" class="radio-3day">Weekend Pass (Fr - Su) CHF 220.- | EUR 200.-</label></span>
+                                <span><input id="q51" name="option" type="radio" value="ST"/><label for="q51" class="radio-1day">Single Day Ticket CHF 85.- (Comment wich day please)</label></span>
                             </div>
                         </li>
                         <li>
