--- a/fest/templates/snippets/footer.html
+++ b/fest/templates/snippets/footer.html
@@ -4,11 +4,11 @@
               <h2>Acrolama</h2>
               <p>Two lovely Acrobats who decided Acro made fun so it needs to spread. Why lama? Cause like, Who doesn't like lamas!?</p>
               <ul class="actions">
-                <li><a href="https://acrolama.com/" class="button">Learn More</a></li>
+                <li><a href="https://acrolama.com/" class="button">Learn more</a></li>
               </ul>
             </section>
             <section>
-              <h2>Some General Information</h2>
+              <h2>General contact information</h2>
               <dl class="alt">
                 <dt>Whatsapp</dt>
                                 <dd><a href='https://chat.whatsapp.com/F4YKDpKs1LL40KnFAtVXav'>Winter Fest Group</a></dd>
@@ -21,5 +21,6 @@
                 <li><a href="https://www.youtube.com/channel/UC9_46R-RgJlkN4DghDug3Kw/" class="icon fa-youtube alt"><span class="label"></span></a></li>
               </ul>
             </section>
-            <p class="copyright">&copy; Winter Acro Fest with Acrolama. Design: Adrian Garate & Giulia Martinelli - Icons and Others of: <a href="https://html5up.net">HTML5 UP</a>.</p>
+            <p class="copyright">&copy; Winter acro festival by acrolama. Design: Adrian Garate & Giulia Martinelli.</br>
+            Pictures by <a href="http://mad-motions.com">Matthias Bleisch</a> - Icons and others of: <a href="https://html5up.net">HTML5 UP</a>.</p>
           </footer>
