Typos and links 0.3

--- a/fest/templates/location.html
+++ b/fest/templates/location.html
@@ -17,7 +17,7 @@
                                             <img src="{% static "fest/images/pic04.jpg"%}" alt="" />
                                     </span>
                                     <h1>Accommodation</h1>
-                                    <h2>Mountain Lodge Camp</h2>
+                                    <h2>Mountain lodge camp</h2>
                                     <p>
                                     <span class="image right">
                                             <img src="{% static "fest/images/pic05.jpg" %}" alt="" />
@@ -27,9 +27,9 @@
                                     year.</br>
                                     <h3>Dorms</h3>
                                     We have 4 dormitories with each between 16 - 20 sleeping spots.</br>
-                                    There are mattress and pillows but please bring your own sleeping bag</br></br>
+                                    There are mattress and pillows but please bring your own sleeping bag.</br></br>
                                     Direction</br>
-                                    Mountain Lodge Backpacker Camp</br>
+                                    Mountain lodge backpacker camp</br>
                                     Gutenbrunnenstrasse</br>
                                     3775 Lenk</br></br>
                                     <a class="button" style="box-shadow:0px; background:#f3d216;"
@@ -41,7 +41,7 @@
                                     <h3>Some other extra infos:</h3>
                                     <p>We'll place the sauna near to the camp.</br>
                                     There are parking places for cars and mini buses.</br>
-                                    We recommend you to come by Train.</br>
+                                    We recommend you to come by train.</br>
                                     Bring some house shoes for the hall and house.</br>
                                     All the meals are in the hall. Some snacks and coffee will be provided.</br>
                             </section>
