--- a/fest/templates/prices.html
+++ b/fest/templates/prices.html
@@ -16,22 +16,23 @@
                         <span class="image main"><img src="{% static "fest/images/pic07.jpg"%}" alt="" /></span>
                         <h2>Festival passes</h2>
                         <p> We have passes based on the amout of days you stay at the festival. All of them
-                        include: Accommodation, Food, Workshops and Special Events.</br>
-                        Single Day Ticket <u>don't include breakfast or Accommodations</u>.
-                        <h3>List Price</h3>
+                        include: accommodation, food, workshops and special events.</br>
+                        Single Day Ticket <u>don't include breakfast or accommodations</u>.
+                        <h3>Price list</h3>
                         <ul>
-                            <li>6 Days Pass: CHF 460.- / EUR 420.- </li>
-                            <li>Weekend Pass(FR-SU): CHF 220.- / EUR 200.-</li>
-                            <li>Single Day Ticket: CHF 85.-</li>
+                            <li>6 Days Pass: CHF 460.- | EUR 420.- </li>
+                            <li>Weekend Pass(FR-SU): CHF 220.- | EUR 200.-</li>
+                            <li>Single Day Ticket: CHF 85.- | EUR 75.-</li>
                         </ul>
-                        <h3>Payment Methods</h3>
-                        <p> We will send you the Bank Details after you Register in the
-                        <a href="{% url "winterform"%}">REGISTRATION</a></br>
-                        If some other payment method is needed for special reasons you can allways ask,
-                        there might be a fee included</p>
-                        <h2>Refund Conditions</h2>
-                        <p>Before 15. of January: 50% refund. After: no refund, but you can happily sell or
-                        give your ticket to someone else. Let us know about the name change per email!</p>
+                        <h3>Payment methods</h3>
+                        <p> We will send you the bank details after you send us your registration
+                        <a href="{% url "winterform"%}"> FORM</a> by email.</br>
+                        If another payment method is needed for any special reason please ask us directly.</br>
+                        *Note that there might be a fee included.</p>
+                        <h2>Refund conditions</h2>
+                        <p>Before 15. of January: 50% refund. After: no refund, <u>but</u> you can happily sell or
+                        give your ticket to someone else. Let us know about the name change per your registration
+                        email!</p>
                     </section>
             </div>
             {% include 'snippets/footer.html' %}
