--- a/fest/static/fest/css/main.css
+++ b/fest/static/fest/css/main.css
@@ -2902,6 +2902,7 @@
 		padding: 0;
 		list-style: none;
 		cursor: default;
+        height:12em;
 	}
 
 		.statistics li {
@@ -2909,7 +2910,7 @@
 			-webkit-flex: 1;
 			-ms-flex: 1;
 			flex: 1;
-			padding: 1.5em;
+			padding: 1.5em 0em;
 			color: #ffffff;
 			text-align: center;
 		}
