--- a/fest/templates/index.html
+++ b/fest/templates/index.html
@@ -82,8 +82,8 @@
                         <h3>Special events</h3>
                         <p>
                         On monday noon we organized a <u>snow event up on the mountain</u> at the ski resort
-                        (If the weather is good <i class="fa fa-hand-o-left" aria-hidden="true"></i>). Bring warm cloths
-                        for out-door acro. Free afternoon for ski, snowboard or free floor at the hall.</br>
+                        (If the weather is good <i class="fa fa-hand-o-left" aria-hidden="true"></i>). Bring warm
+                        clothes for out-door acro. Free afternoon for ski, snowboard or free floor at the hall.</br>
                         There's <u>sauna to relax and an open stage</u> to share your talents.</br>*As an <u>EXTRA</u>,
                         we could organise a day ski ticket for you.
                         </p>
