--- a/formulario/templates/homeform.html
+++ b/formulario/templates/homeform.html
@@ -13,31 +13,31 @@
                 <form id="myform" class="fs-form fs-form-full" autocomplete="off" method="POST">{% csrf_token %}
                     <ol class="fs-fields">
                         <li>
-                            <label class="fs-field-label fs-anim-upper" for="name">What's your Name?</label>
+                            <label class="fs-field-label fs-anim-upper" for="name">What's your full name?</label>
                             <input class="fs-anim-lower" id="name" name="name" type="text" placeholder="Dean Moriarty" required/>
                         </li>
                        <li>
-                            <label class="fs-field-label fs-anim-upper" for="address">What's your Address?</label>
+                            <label class="fs-field-label fs-anim-upper" for="address">What's your address?</label>
                             <input class="fs-anim-lower" id="address" name="address" type="text" placeholder="221B Baker Street England" required/>
                         </li>
                        <li>
-                            <label class="fs-field-label fs-anim-upper" for="numero" data-info="For Emergencys only">What's your Phone Number?</label>
+                            <label class="fs-field-label fs-anim-upper" for="numero" data-info="For emergencys only">What's your phone number?</label>
                             <input class="fs-anim-lower" id="numero" name="numero" type="text" placeholder="+4112345678" required/>
                         </li>
                         <li>
-                            <label class="fs-field-label fs-anim-upper" for="email" data-info="We won't send you spam, we promise...">What's your Email?</label>
+                            <label class="fs-field-label fs-anim-upper" for="email" data-info="We won't send you spam, we promise...">What's your email?</label>
                             <input class="fs-anim-lower" id="email" name="email" type="email" placeholder="acrolama@acrolama.com" required/>
                         </li>
                         <li data-input-trigger>
-                            <label class="fs-field-label fs-anim-upper" for="option" data-info="All the Scheduele is in the Event. Please Comment wich day your comming if you come a Single Day.">How many days will you stay? <i class="fa fa-heart" aria-hidden="true"></i></label>
+                            <label class="fs-field-label fs-anim-upper" for="option" data-info="All the scheduele is in the event. Please comment which day your comming if you come a single day.">How many days will you stay? <i class="fa fa-heart" aria-hidden="true"></i></label>
                             <div class="fs-radio-group fs-radio-custom clearfix fs-anim-lower">
                                 <span><input id="q54" name="option" type="radio" value="FL"/><label for="q54" class="radio-4day">6 Days Pass CHF 460.- | EUR 420.-</label></span>
                                 <span><input id="q53" name="option" type="radio" value="WE"/><label for="q53" class="radio-3day">Weekend Pass (Fr - Su) CHF 220.- | EUR 200.-</label></span>
-                                <span><input id="q51" name="option" type="radio" value="ST"/><label for="q51" class="radio-1day">Single Day Ticket CHF 85.- (Comment wich day please)</label></span>
+                                <span><input id="q51" name="option" type="radio" value="ST"/><label for="q51" class="radio-1day">Single Day Ticket CHF 85.-| EUR 75.- (Please comment which day)</label></span>
                             </div>
                         </li>
                         <li>
-                            <label class="fs-field-label fs-anim-upper" for="allergies" data-info="All food is Bio & Vegan">Any comment? Allergies? or some other healt related condition?</label>
+                            <label class="fs-field-label fs-anim-upper" for="allergies" data-info="All food is Bio & Vegan">Any allergies? or some other healt related condition?. If comming for a single day please comment which day.</label>
                             <textarea class="fs-anim-lower" id="allergies" name="allergies" placeholder="Describe here"></textarea>
                         </li>
                     </ol><!-- /fs-fields -->
