--- a/fest/templates/index.html
+++ b/fest/templates/index.html
@@ -183,6 +183,26 @@
                     </ul>
                 </footer>-->
             </section>
+            <section id="media" class="main">
+                    <header class="major">
+                    <h2>Photos 2018</h2>
+                    <h3>by Matthias Bleisch</h3>
+                    </header>
+                    <div class="box alt">
+                            <div class="row gtr-uniform">
+                                    <div class="col-4"><span class="image fit"><img src="{% static "fest/images/Winter_Acro_Festival_Lenk_Star.jpg"%}" alt="Winter Acro Festival Lenk Star - Acrolama" /></span></div>
+                                    <div class="col-4"><span class="image fit"><img src="{% static "fest/images/Winter_Acro_Festival_Lenk_3Manhigh.jpg"%}" alt="Winter Acro Festival Lenk Star - Acrolama" /></span></div>
+                                    <div class="col-4"><span class="image fit"><img src="{% static "fest/images/Winter_Acro_Festival_Lenk_Mira.jpg"%}" alt="Winter Acro Festival Lenk Star - Acrolama" /></span></div>
+                                    <div class="col-4"><span class="image fit"><img src="{% static "fest/images/Winter_Acro_Festival_Lenk_Slackline.jpg"%}" alt="Winter Acro Festival Lenk Star - Acrolama" /></span></div>
+                                    <div class="col-3"><span class="image fit"><img src="{% static "fest/images/Winter_Acro_Festival_Lenk_Snow.jpg"%}" alt="Winter Acro Festival Lenk Star - Acrolama" /></span></div>
+                                    <div class="col-4"><span class="image fit"><img src="{% static "fest/images/Winter_Acro_Festival_Lenk_3manhigh_2.jpg"%}" alt="Winter Acro Festival Lenk Star - Acrolama" /></span></div>
+                                    <div class="col-4"><span class="image fit"><img src="{% static "fest/images/Winter_Acro_Festival_Lenk_Onearm.jpg"%}" alt="Winter Acro Festival Lenk Star - Acrolama" /></span></div>
+                                    <div class="col-4"><span class="image fit"><img src="{% static "fest/images/Winter_Acro_Festival_Lenk_Snow2.jpg"%}" alt="Winter Acro Festival Lenk Star - Acrolama" /></span></div>
+                                    <div class="col-4"><span class="image fit"><img src="{% static "fest/images/Winter_Acro_Festival_Lenk_Outdoor.jpg"%}" alt="Winter Acro Festival Lenk Star - Acrolama" /></span></div>
+
+                            </div>
+                    </div>
+            </section>
     </div>
     {% include 'snippets/footer.html' %}
 </div>
