--- a/fest/static/fest/css/main.css
+++ b/fest/static/fest/css/main.css
@@ -2301,7 +2301,7 @@
 		.icon:before {
 			-moz-osx-font-smoothing: grayscale;
 			-webkit-font-smoothing: antialiased;
-			font-family: 'Font Awesome 5 Free';
+/*			font-family: 'Font Awesome 5 Free';*/
 			font-style: normal;
 			font-weight: 900;
 			text-transform: none !important;
