--- a/fest/templates/index.html
+++ b/fest/templates/index.html
@@ -49,7 +49,7 @@
                 </header>
                 <ul class="features">
                     <li>
-                        <span class="icon major style1 fa-bed"></span>
+                        <span class="icon major style1 fas fa-bed"></span>
                         <h3>Accommodation</h3>
                         <p>
                         This year the dorm is 4 min. walk from the hall - No LamaAirlines, sorry :( -. Important is
@@ -59,7 +59,7 @@
                         </p>
                     </li>
                     <li>
-                        <span class="icon major style3 fa-utensils"></span>
+                        <span class="icon major style3 fas fa-utensils"></span>
                         <h3>Food</h3>
                         <p>
                         Food plays an important roll in this festival. Main dishes, healthy snacks and fruits are all
@@ -69,7 +69,7 @@
                         </p>
                         </li>
                     <li>
-                        <span class="icon major style5 fa-cogs"></span>
+                        <span class="icon major style5 fas fa-cogs"></span>
                         <h3>Workshops</h3>
                         <p>
                         There'll be 11 rounds of acro workshops and space for a constant jam. Experience in acro is
@@ -78,7 +78,7 @@
                         </p>
                     </li>
                     <li>
-                        <span class="icon major style3 fa-snowflake"></span>
+                        <span class="icon major style3 fas fa-snowflake"></span>
                         <h3>Special events</h3>
                         <p>
                         On monday noon we organized a <u>snow event up on the mountain</u> at the ski resort
@@ -89,7 +89,7 @@
                         </p>
                     </li>
                     <li>
-                        <span class="icon major style2 fa-map-marker"></span>
+                        <span class="icon major style2 fas fa-map-marker"></span>
                         <h3>Location</h3>
                         <p>
                         This Festival takes place in Lenk im Simmental, Switzerland. A complete description on how to
@@ -98,7 +98,7 @@
                         </p>
                         </li>
                     <li>
-                        <span class="icon major style1 fa-money-bill-wave"></span>
+                        <span class="icon major style1 fas fa-money-bill-wave"></span>
                         <h3>Prices</h3>
                         <p>
                         We have tickets based on the amount of days you stay at the festival. All include:</br>
@@ -125,7 +125,7 @@
                     <h2>Friday</h2>
                     <ul class="statistics">
                         {% for obj in fri %}
-                        <li class="{{obj.style}}">
+                        <li class="fas {{obj.style}}">
                                 <span class="{{obj.icon}}"></span>
                                 <strong>{{obj.time}}</strong> {{obj.title}}
                     </li>
@@ -134,7 +134,7 @@
                     <h2>Saturday</h2>
                     <ul class="statistics">
                         {% for obj in sat %}
-                        <li class="{{obj.style}}">
+                        <li class="fas {{obj.style}}">
                                 <span class="{{obj.icon}}"></span>
                                 <strong>{{obj.time}}</strong> {{obj.title}}
                     </li>
@@ -143,7 +143,7 @@
                     <h2>Sunday</h2>
                     <ul class="statistics">
                         {% for obj in sun %}
-                        <li class="{{obj.style}}">
+                        <li class="fas {{obj.style}}">
                                 <span class="{{obj.icon}}"></span>
                                 <strong>{{obj.time}}</strong> {{obj.title}}
                     </li>
@@ -152,7 +152,7 @@
                     <h2>Monday</h2>
                     <ul class="statistics">
                         {% for obj in mon %}
-                        <li class="{{obj.style}}">
+                        <li class="fas {{obj.style}}">
                                 <span class="{{obj.icon}}"></span>
                                 <strong>{{obj.time}}</strong> {{obj.title}}
                     </li>
@@ -161,7 +161,7 @@
                     <h2>Tuesday</h2>
                     <ul class="statistics">
                     {% for obj in tue %}
-                    <li class="{{obj.style}}">
+                    <li class="fas {{obj.style}}">
                                 <span class="{{obj.icon}}"></span>
                                 <strong>{{obj.time}}</strong> {{obj.title}}
                     </li>
@@ -170,7 +170,7 @@
                     <h2>Wednesday</h2>
                     <ul class="statistics">
                     {% for obj in wed %}
-                        <li class="{{obj.style}}">
+                        <li class="fas {{obj.style}}">
                             <span class="{{obj.icon}}"></span>
                             <strong>{{obj.time}}</strong> {{obj.title}}
                     </li>
