--- a/fest/templates/snippets/footer.html
+++ b/fest/templates/snippets/footer.html
@@ -16,9 +16,9 @@
                 <dd><a href="mailto:acrolama@acrolama.com">acrolama@acrolama.com</a></dd>
               </dl>
               <ul class="icons">
-                <li><a href="https://facebook.com/acrolama/" class="icon fa-facebook alt"><span class="label"></span></a></li>
-                <li><a href="https://instagram.com/acrolama/" class="icon fa-instagram alt"><span class="label"></span></a></li>
-                <li><a href="https://www.youtube.com/channel/UC9_46R-RgJlkN4DghDug3Kw/" class="icon fa-youtube alt"><span class="label"></span></a></li>
+                <li><a href="https://facebook.com/acrolama/" class="icon fab fa-facebook-f  alt"><span class="label"></span></a></li>
+                <li><a href="https://instagram.com/acrolama/" class="icon fab fa-instagram alt"><span class="label"></span></a></li>
+                <li><a href="https://www.youtube.com/channel/UC9_46R-RgJlkN4DghDug3Kw/" class="icon fab fa-youtube alt"><span class="label"></span></a></li>
               </ul>
             </section>
             <p class="copyright">&copy; Winter acro festival by acrolama. Design: Adrian Garate & Giulia Martinelli.</br>
