--- a/fest/templates/index.html
+++ b/fest/templates/index.html
@@ -125,8 +125,8 @@
                     <h2>Friday</h2>
                     <ul class="statistics">
                         {% for obj in fri %}
-                        <li class="fas {{obj.style}}">
-                                <span class="{{obj.icon}}"></span>
+                        <li class="{{obj.style}}">
+                                <span class="fas {{obj.icon}}"></span>
                                 <strong>{{obj.time}}</strong> {{obj.title}}
                     </li>
                     {% endfor %}
@@ -134,8 +134,8 @@
                     <h2>Saturday</h2>
                     <ul class="statistics">
                         {% for obj in sat %}
-                        <li class="fas {{obj.style}}">
-                                <span class="{{obj.icon}}"></span>
+                        <li class="{{obj.style}}">
+                                <span class="fas {{obj.icon}}"></span>
                                 <strong>{{obj.time}}</strong> {{obj.title}}
                     </li>
                     {% endfor %}
@@ -143,8 +143,8 @@
                     <h2>Sunday</h2>
                     <ul class="statistics">
                         {% for obj in sun %}
-                        <li class="fas {{obj.style}}">
-                                <span class="{{obj.icon}}"></span>
+                        <li class="{{obj.style}}">
+                                <span class="fas {{obj.icon}}"></span>
                                 <strong>{{obj.time}}</strong> {{obj.title}}
                     </li>
                     {% endfor %}
@@ -152,8 +152,8 @@
                     <h2>Monday</h2>
                     <ul class="statistics">
                         {% for obj in mon %}
-                        <li class="fas {{obj.style}}">
-                                <span class="{{obj.icon}}"></span>
+                        <li class="{{obj.style}}">
+                                <span class="fas {{obj.icon}}"></span>
                                 <strong>{{obj.time}}</strong> {{obj.title}}
                     </li>
                     {% endfor %}
@@ -161,8 +161,8 @@
                     <h2>Tuesday</h2>
                     <ul class="statistics">
                     {% for obj in tue %}
-                    <li class="fas {{obj.style}}">
-                                <span class="{{obj.icon}}"></span>
+                    <li class="{{obj.style}}">
+                                <span class="fas {{obj.icon}}"></span>
                                 <strong>{{obj.time}}</strong> {{obj.title}}
                     </li>
                     {% endfor %}
@@ -170,8 +170,8 @@
                     <h2>Wednesday</h2>
                     <ul class="statistics">
                     {% for obj in wed %}
-                        <li class="fas {{obj.style}}">
-                            <span class="{{obj.icon}}"></span>
+                        <li class="{{obj.style}}">
+                            <span class="fas {{obj.icon}}"></span>
                             <strong>{{obj.time}}</strong> {{obj.title}}
                     </li>
                     {% endfor %}
