--- a/fest/templates/index.html
+++ b/fest/templates/index.html
@@ -183,6 +183,89 @@
                     </ul>
                 </footer>-->
             </section>
+            <section id="teachers" class="main">
+                    <header class="major">
+                                    <h2>Teachers 2019</h2>
+                                    </header>
+                    <div class="box alt">
+                            <div class="row gtr-uniform">
+                                    <p><h2>Celine & Alfonso - AcroWings</h2></p>
+                                    <p>
+                                    <span class="image left">
+                                            <img src="{% static "fest/images/teachers2019/acrowings.jpg"%}" alt="Acrowings
+                                            in the Winter Acro Fest 2019 for the Second time teaching
+                                            Acrobatics Icarians and more">
+                                    </span>
+                                    With these two beauties we go way back to the beggings of our acro carriers. Amazing
+                                    friends and teachers!! We're very happy to have them back.<br>
+                                    Alfonso has so much encouraging energy. You cannot stop him doing acro!<br>
+                                    Celine, well... if her smilie doesn't captivate you, just wait to see her fly icarians and whips.
+                                    Jaw dropping.<br>
+                                    The'll be sharing their whips, pops and icarians moves in this Winter Festival 2019.
+                                    </p>
+                                    <p><h2>Trudi & Wybrem</h2></p>
+                                    <p>
+                                    <span class="image right">
+                                            <img src="{% static "fest/images/teachers2019/wybremandtrudi.jpg"%}" alt="Wybrem and Trudi
+                                            in the Winter Acro Fest 2019 - Skining Codarts and more">
+                                    </span>
+                                    I'll be honest, first encounter was a bit intimidating. But then you go full FKK at
+                                    some random acro conventions and you realise we're all in the same rail here (sort of).<br>
+                                    It's endless what you could learn from this couple of amazing acrobats!<br>
+                                    Wybrem is teacher at the Codarts Circus School in Rotterdam and with Trudi they have
+                                    given many of our favorite technical Workshops. Very happy to have them on board!
+                                    </p>
+                                    <p><h2>Peter</h2></p>
+                                    <p>
+                                    <span class="image left">
+                                            <img src="{% static "fest/images/teachers2019/peter.jpg"%}" alt="Acrowings
+                                            in the Winter Acro Fest 2019 for the Second time teaching
+                                            Acrobatics Icarians and more">
+                                    </span>
+                                    We where on our way to give a workshop in Copenhagen and while stalking the local
+                                    teachers we came across some pretty nice flows. Later that that day we finaly met
+                                    the authors: Peter and Julie. So lovely and beautiful people!! and what a multi poli
+                                    hiper mover Peter is. Very happy to have him for the Winter Acro 2019!
+                                    </p>
+                                    <p><h2>Fer & Fifi</h2></p>
+                                    <p>
+                                    <span class="image right">
+                                            <img src="{% static "fest/images/teachers2019/feryfifi.jpg"%}" alt="Acrowings
+                                            in the Winter Acro Fest 2019 for the Second time teaching
+                                            Acrobatics Icarians and more">
+                                    </span>
+                                    We met this couple just recently at the 7th Barcelona Mano a Mano Convention and liked
+                                    they'r way of teaching so much that we had to invite them.<br>
+                                    Experts in flying and Circus art are going to share a peace of their knowleadge with us!
+                                    Thanks for accepting our invitation and happy to see you soon !
+                                    </p>
+                                    <p><h2>Paul</h2></p>
+                                    <p>
+                                    <span class="image left">
+                                            <img src="{% static "fest/images/teachers2019/paul.jpg"%}" alt="Acrowings
+                                            in the Winter Acro Fest 2019 for the Second time teaching
+                                            Acrobatics Icarians and more">
+                                    </span>
+                                    </p>
+                                    <p><h2>Daniel Marty</h2></p>
+                                    <p>
+                                    <span class="image right">
+                                            <img src="{% static "fest/images/teachers2019/daniel.jpg"%}" alt="Acrowings
+                                            in the Winter Acro Fest 2019 for the Second time teaching
+                                            Acrobatics Icarians and more">
+                                    </span>
+                                    </p>
+                                    <p><h2>Ben and Elli - Analogue Acrobatics</h2></p>
+                                    <p>
+                                    <span class="image left">
+                                            <img src="{% static "fest/images/teachers2019/benandelli.jpg"%}" alt="Acrowings
+                                            in the Winter Acro Fest 2019 for the Second time teaching
+                                            Acrobatics Icarians and more">
+                                    </span>
+                                    </p>
+                            </div>
+                    </div>
+            </section>
             <section id="media" class="main">
                     <header class="major">
                     <h2>Photos 2018</h2>
