--- a/fest/templates/index.html
+++ b/fest/templates/index.html
@@ -245,6 +245,10 @@
                                             <img src="{% static "fest/images/teachers2019/paul.jpg"%}" alt="Acrowings
                                             in the Winter Acro Fest 2019 for the Second time teaching
                                             Acrobatics Icarians and more">
+                                    First time I read about Paul they discribed him as the swiss knife of acrobatics.
+                                    Soon enought we learned to know why: basing, flying and basicly a encyclopedia of
+                                    creative tricks. He's comming to share hes many curious tricks and humor for the
+                                    first time in the Swiss alps.
                                     </span>
                                     </p>
                                     <p><h2>Daniel Marty</h2></p>
@@ -253,6 +257,11 @@
                                             <img src="{% static "fest/images/teachers2019/daniel.jpg"%}" alt="Acrowings
                                             in the Winter Acro Fest 2019 for the Second time teaching
                                             Acrobatics Icarians and more">
+                                    For been "just his hobby" Daniel has investes A LOT of time in his practice, and
+                                    another bunch in developing the basel and swiss acro community. Mostly traveling
+                                    arround from one big acro event to another, he hardly misses the local events. Very
+                                    happy to have him sharing all that collected knowleadge at the Winter Acro Festival
+                                    this 2019!
                                     </span>
                                     </p>
                                     <p><h2>Ben and Elli - Analogue Acrobatics</h2></p>
@@ -262,7 +271,25 @@
                                             in the Winter Acro Fest 2019 for the Second time teaching
                                             Acrobatics Icarians and more">
                                     </span>
+                                    We met Ben at the post Dutch acro convention and after he noticed all or
+                                    technicals mistakes we developed a bit of a training plan with him. What a difference
+                                    when you talk with profesionals. Ben and Elli are circus school graduates with many
+                                    more talents than just acrobatics. I hope you can see one of their shows too, highly
+                                    recommended. Very happy to see them again this Winter!
                                     </p>
+                                    <p><h2>Bruno</h2></p>
+                                    <p>
+                                    <span class="image right">
+                                            <img src="{% static "fest/images/teachers2019/bruno.jpg"%}" alt="Acrowings
+                                            in the Winter Acro Fest 2019 for the Second time teaching
+                                            Acrobatics Icarians and more">
+                                    I had to laugh only from remembering Bruno at the French acro convention, what a
+                                    blast you'll have with this guy! Improvisation and staging are he's strengths and
+                                    passion. But there are no words, you just have to meet him. Happy to have you with
+                                    us!!
+                                    </span>
+                                    </p>
+
                             </div>
                     </div>
             </section>
