--- a/fest/templates/basefest.html
+++ b/fest/templates/basefest.html
@@ -2,12 +2,12 @@
 <html lang="en">
     <head>
         {% load static %}
-        <title>Winter Acro Festival - Acrobatic and acroyoga festival in the swiss alps.</title>
+        <title>Winter Acro Festival - Acrobatic festival in the swiss alps.</title>
         <meta name="Description" content="The Winter Acro Festival based in Lenk Switzerland includes many acrobatic, acroyoga, Thai massage, yoga and movement workshops. With teachers form all around the world, a special attention to quality and different snow events its a event you should not miss!">
         <meta name="Keywords" content="acrobatic, acroyoga, swiss acro, acroyoga switzerland, suisse acrobatics, akrobatik schweizx">
-		<meta charset="utf-8" />
+		<meta charset="utf-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta property="og:url" content="https://acrolama.com/" />
+        <meta property="og:url" content="https://acrofestival.ch/winteracro/" />
         <meta property="og:title" content="Winter Acro Festival" />
         <meta property="og:image" content="{% static 'fest/images/banner.jpg' %}"/>
 		    {% include 'snippets/cssfest.html' %}
