--- a/acrofestival/templates/base.html
+++ b/acrofestival/templates/base.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="Urban Acro Festival Züri" />
     <meta property="og:image" content="{% static 'images/logo_acrofestival.png'%}">
     <link rel="icon" href="{% static 'images/favicons/favicon.ico' %}">
-	<link rel="apple-touch-icon" href="assets/img/apple-touch-icon.jpg">
+    <link rel="apple-touch-icon" href="assets/img/apple-touch-icon.jpg">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -56,10 +56,10 @@
     {% block javascript %}
         <!--[if lt IE 9]>
         <script type="text/javascript" src="{% static 'js/jquery-1.11.3.min.js'%}"></script>
-	    <![endif]-->
-	    <!--[if (gte IE 9) | (!IE)]><!-->
+        <![endif]-->
+        <!--[if (gte IE 9) | (!IE)]><!-->
         <script type="text/javascript" src="{% static 'js/jquery-2.1.4.min.js'%}"></script>
-	    <!--<![endif]-->
+        <!--<![endif]-->
 
       <!-- Required by Bootstrap v4 beta -->
       <!--<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
@@ -79,7 +79,17 @@
 
       <!-- place project specific Javascript in this file -->
         <script type="text/javascript" src="{% static 'js/ventcamp.js'%}"></script>
-
+    
     {% endblock javascript %}
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-118797477-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-118797477-2');
+    </script>
+
   </body>
 </html>
