--- a/fest/templates/basefest.html
+++ b/fest/templates/basefest.html
@@ -15,5 +15,15 @@
     <body>
             {% block content %}{% endblock content %}
             {% include 'snippets/jsfest.html' %}
+            <!-- Global site tag (gtag.js) - Google Analytics -->
+            <script async src="https://www.googletagmanager.com/gtag/js?id=UA-118797477-2"></script>
+            <script>
+                window.dataLayer = window.dataLayer || [];
+                function gtag(){dataLayer.push(arguments);}
+                gtag('js', new Date());
+
+                gtag('config', 'UA-118797477-2');
+            </script>
+
     </body>
 </html>
